--- a/views/users/shopdetail.ejs
+++ b/views/users/shopdetail.ejs
@@ -102,8 +102,8 @@
                       </div>
                       <div class="product-extra-link2">
                         <button type="submit" class="button button-add-to-cart"  data-id="<%= product.id %>" onclick="addToCart('<%= product.id %>')">Add to cart</button>
-                        <!-- <a aria-label="Add To Wishlist" class="action-btn hover-up" href="shop-wishlist.html"><i class="fi-rs-heart"></i></a>
-                        <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a> -->
+                        <a aria-label="Add To Wishlist"  class="add-to-wishlist-button"data-id="<%= product.id %>" onclick="addToWishlist('<%= product.id %>')"><i class="fi-rs-heart"></i></a>
+                        <!-- <a aria-label="Compare" class="action-btn hover-up" href="shop-compare.html"><i class="fi-rs-shuffle"></i></a> -->
                       </div>
                     </div>
                     <div class="product-share mt-40">
@@ -169,6 +169,53 @@
       });
     }
   }
+
+
+  async function addToWishlist(productId) {
+  try {
+    const response = await fetch('/add-wishlist', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({ productId }),
+    });
+    const data = await response.json();
+    if (data.success) {
+      Swal.fire({
+        title: 'Success',
+        text: 'Product added to wishlist successfully!',
+        icon: 'success',
+        confirmButtonText: 'OK',
+      });
+    } else if (data.error === 'Product already in wishlist') {
+      Swal.fire({
+        title: 'Info',
+        text: 'Product is already in the wishlist.',
+        icon: 'info',
+        confirmButtonText: 'OK',
+      });
+    } else {
+      Swal.fire({
+        title: 'Error',
+        text: data.error || 'An error occurred while adding the product to wishlist.',
+        icon: 'error',
+        confirmButtonText: 'OK',
+      });
+    }
+  } catch (error) {
+    Swal.fire({
+      title: 'Error',
+      text: 'An error occurred while adding the product to wishlist.',
+      icon: 'error',
+      confirmButtonText: 'OK',
+    });
+  }
+}
+
+
+
+
   </script>
 
     <%- include('../partials/footercopy') %>
