--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -150,7 +150,7 @@
             </div>
             <div class="modal-body">
                 <div class="form-group mb-3"></div>
-                <div class="available-coupons">
+                <!-- <div class="available-coupons">
                     <h6>Available Coupons:</h6>
                     <ul class="list-group">
                         <% coupons.forEach(coupon => { %>
@@ -165,6 +165,26 @@
                                 <% } %>
                             </div>
                         </li>
+                        <% }); %>
+                    </ul>
+                </div> -->
+                <div class="available-coupons">
+                    <h6>Available Coupons:</h6>
+                    <ul class="list-group">
+                        <% coupons.forEach(coupon => { %>
+                            <% if (coupon.status === 'active') { %>
+                                <li class="list-group-item d-flex justify-content-between align-items-center">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="radio" name="coupon" id="<%= coupon.couponcode %>" value="<%= coupon.couponcode %>" <%= coupon.usedBy.includes(user._id) ? 'disabled' : '' %>>
+                                        <label class="form-check-label" for="<%= coupon.couponcode %>">
+                                            <%= coupon.couponname %> - Code: <%= coupon.couponcode %> - Minimum amount: <%= coupon.minimumamount %> - Maximum discount amount: <%= coupon.maximumDiscountAmount %>
+                                        </label>
+                                        <% if (coupon.usedBy.includes(user._id)) { %>
+                                            <span class="badge bg-warning">Used</span>
+                                        <% } %>
+                                    </div>
+                                </li>
+                            <% } %>
                         <% }); %>
                     </ul>
                 </div>
@@ -1213,7 +1233,19 @@ function placeOrder(addressId, paymentMethod, total, subtotal) {
     });
   }
 }
-        
+
+
+function checkActiveCoupons() {
+    const coupons = document.querySelectorAll('input[name="coupon"]');
+    if (coupons.length === 0) {
+        document.getElementById("applyCouponBtn").disabled = true;
+        Swal.fire({
+            icon: 'info',
+            title: 'No Active Coupons',
+            text: 'There are currently no active coupons available.',
+        });
+    }
+}
         
         </script>
         
